# sophia-ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  feature_request.md  new_hat.md  pull_request_template.md
decisions/: 003-depth-first-consequence-trees.md  004-four-independent-evaluators.md  008-uncertainty-bumps-up.md  009-llm-provider-abstraction.md  010-tool-scoping-per-hat.md  011-audit-trail.md  012-memory-independent-from-hats.md  013-three-tier-memory-model.md  017-conversational-bypass.md  019-constitution-based-identity.md  019-preflight-parameter-gate.md  ADR-001-propose-then-evaluate-pipeline.md  ADR-002-domain-agnostic-hat-system.md  ADR-005-tribal-veto-power.md  ADR-006-deterministic-risk-classification.md  ADR-007-four-tier-autonomy.md  ADR-014-surrealdb-memory-database.md  ADR-015-memory-provider-abstraction.md  ADR-016-three-system-data-architecture.md  ADR-018-response-generation.md  ADR-020-preflight-parameter-gate.md  ADR-021-preflight-acknowledgment.md  ADR-022-service-provider-abstraction.md  ADR-023-hat-scoped-backend-configuration.md  ADR-024-generic-rest-graphql-adapters.md  ADR-025-webhook-event-ingestion.md  ADR-026-mcp-as-backend-transport.md  ADR-027-api-authentication.md  ADR-028-outbound-notifications.md  ADR-029-webhook-event-execution.md  ADR-030-situation-evaluation.md  ADR-031-tool-declared-risk-floors.md  ADR-032-per-stage-llm-model-routing.md  ADR-033-consequence-tree-caching.md  README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  (+4 more)
(+227 files in other folders)
